crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__about_overlay.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 851
expression: content
---





               ╭ About ─────────────────────────────────────────╮
               │                                                │
               │                                                │
               │             ██████╗ ██╗██╗  ██╗██╗             │
               │             ██╔══██╗██║██║ ██╔╝██║             │
               │             ██████╔╝██║█████╔╝ ██║             │
               │             ██╔═══╝ ██║██╔═██╗ ██║             │
               │             ██║     ██║██║  ██╗██║             │
               │             ╚═╝     ╚═╝╚═╝  ╚═╝╚═╝             │
               │                                                │
               │          piki-multi-ai v3.2.0-nightly          │
               │                                                │
               │               Author: Juan Knebel              │
               │          Contact: juanknebel@gmail.com         │
               │    Web: github.com/juanknebel/piki-multi-ai    │
               │                License: GPL-2.0                │
               │                                                │
               │             Press Esc or a to close            │
               │                                                │
               ╰────────────────────────────────────────────────╯
