crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__agents_pane_with_rows.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 280
expression: content
---
╭ AGENTS ──────────────────────────────╮
│ — demo-ws · Claude not started       │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
╰──────────────────────────────────────╯
