crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__commit_message_dialog.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 202
expression: content
---








                ┌ Commit ──────────────────────────────────────┐
                │                                              │
                │  Message: feat: add snapshot tests█          │
                │                                              │
                │  [Enter] Commit  [Esc] Cancel                │
                │                                              │
                └──────────────────────────────────────────────┘
