crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__confirm_close_tab_dialog.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 111
expression: content
---








                    ╭ Close Tab ───────────────────────────╮
                    │                                      │
                    │             Close tab ""?            │
                    │                                      │
                    │           [Y] Yes    [N] No          │
                    │                                      │
                    ╰──────────────────────────────────────╯
