crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__confirm_delete_dialog.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---







               ╭ Delete Checkout ───────────────────────────────╮
               │                                                │
               │  Remove ? ?                                    │
               │                                                │
               │  [y] Yes, remove from list                     │
               │  [Esc] cancel                                  │
               │                                                │
               │                                                │
               ╰────────────────────────────────────────────────╯
