crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__confirm_merge_dialog.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 186
expression: content
---







               ┌ Merge ─────────────────────────────────────────┐
               │                                                │
               │  Merge ? into main?                            │
               │                                                │
               │  [m] Merge commit                              │
               │  [r] Rebase + fast-forward                     │
               │  [Esc] Cancel                                  │
               │                                                │
               └────────────────────────────────────────────────┘
