crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__confirm_quit_dialog.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 98
expression: content
---








                    ╭ Quit ────────────────────────────────╮
                    │                                      │
                    │    Are you sure you want to quit?    │
                    │                                      │
                    │           [Y] Yes    [N] No          │
                    │                                      │
                    ╰──────────────────────────────────────╯
