crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__dashboard_overlay.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 824
expression: content
---


      ╭ Dashboard ───────────────────────────────────────────────────────╮
      │  — No external claude agents —                                   │
      │ [j/k] navigate  [Enter] switch  [Esc] close                      │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      ╰──────────────────────────────────────────────────────────────────╯
