crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__empty_app_layout.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---

╭ PROJECTS ────╮
│              │────────────────────────────────────────────────────────────────
│ [n] New proje│╭ piki-multi-ai ───────────────────────────────────────────────╮
│ [C-g s] Add r││                                                              │
│              ││  Welcome to piki-multi-ai                                    │
│              ││                                                              │
│              ││  Quick Start:                                                │
│              ││                                                              │
│              ││  1. [C-g s] Add your first repository                        │
│              ││  2. [C-g w] Switch between checkouts                         │
╰──────────────╯│  3. [Enter] Interact with the terminal                       │
╭ AGENTS ──────╮│  4. [C-g ?] Full help                                        │
│  No agents ru││                                                              │
│  [C-g c] new ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              │╰──────────────────────────────────────────────────────────────╯
╰──────────────╯ Nothing open
 [n] new project  [C-g s] new ws
