crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__footer_from_keys_single_line.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 136
expression: content
---
 [q] quit  [?] help
