crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__footer_wraps_on_narrow_terminal.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 156
expression: content
---
 [hjkl] navigate  [enter] inte
 [n] new ws  [q] quit  [?] hel
